--- a/package.json
+++ b/package.json
@@ -22,22 +22,22 @@
     "ejs": "2.4.1",
     "errorhandler": "1.4.3",
     "express": "^4.16.4",
-    "express-jwt": "^5.3.1",
+    "express-jwt": "3.3.0",
     "express-session": "^1.15.6",
-    "jsonwebtoken": "^8.5.0",
-    "method-override": "^3.0.0",
+    "jsonwebtoken": "7.1.9",
+    "method-override": "2.3.5",
     "methods": "1.1.2",
-    "mongoose": "^5.4.15",
+    "mongoose": "4.4.10",
     "mongoose-unique-validator": "1.0.2",
     "morgan": "^1.9.1",
     "passport": "0.3.2",
     "passport-local": "1.0.0",
     "request": "^2.88.0",
-    "slug": "^1.0.0",
+    "slug": "^0.9.3",
     "underscore": "1.8.3"
   },
   "devDependencies": {
-    "newman": "^4.4.0",
+    "newman": "^3.8.2",
     "nodemon": "^1.11.0"
   }
 }
