--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "mongoose-unique-validator": "1.0.2",
     "morgan": "^1.9.1",
     "passport": "0.3.2",
+    "multer": "1.3.0",
+    "multer-gridfs-storage": "1.0.0",
+    "gridfs-stream": "1.1.1",
     "passport-local": "1.0.0",
     "request": "^2.88.0",
     "slug": "^0.9.3",
