--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@ng-toolkit/universal": "^7.1.2",
     "body-parser": "^1.18.3",
     "cors": "2.7.1",
     "ejs": "2.4.1",
@@ -25,16 +26,16 @@
     "express-jwt": "3.3.0",
     "express-list-endpoints": "^4.0.1",
     "express-session": "^1.15.6",
+    "gridfs-stream": "1.1.1",
     "jsonwebtoken": "7.1.9",
     "method-override": "2.3.5",
     "methods": "1.1.2",
     "mongoose": "4.4.10",
     "mongoose-unique-validator": "1.0.2",
     "morgan": "^1.9.1",
-    "passport": "0.3.2",
     "multer": "1.3.0",
     "multer-gridfs-storage": "1.0.0",
-    "gridfs-stream": "1.1.1",
+    "passport": "0.3.2",
     "passport-local": "1.0.0",
     "request": "^2.88.0",
     "slug": "^0.9.3",
