--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "morgan": "^1.9.1",
     "multer": "1.3.0",
     "multer-gridfs-storage": "1.0.0",
+    "nodemailer": "^6.1.1",
     "passport": "0.3.2",
     "passport-local": "1.0.0",
     "request": "^2.88.0",
