--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "passport-local": "1.0.0",
     "request": "^2.88.0",
     "slug": "^0.9.3",
+    "socket.io": "^2.2.0",
     "underscore": "1.8.3"
   },
   "devDependencies": {
