--- a/package.json
+++ b/package.json
@@ -23,14 +23,15 @@
     "ejs": "2.4.1",
     "errorhandler": "1.4.3",
     "express": "^4.16.4",
-    "express-jwt": "3.3.0",
+    "express-jwt": "^5.3.1",
     "express-list-endpoints": "^4.0.1",
     "express-session": "^1.15.6",
+    "fast-csv": "^2.5.0",
     "gridfs-stream": "1.1.1",
-    "jsonwebtoken": "7.1.9",
-    "method-override": "2.3.5",
+    "jsonwebtoken": "^8.5.1",
+    "method-override": "^3.0.0",
     "methods": "1.1.2",
-    "mongoose": "4.4.10",
+    "mongoose": "^5.5.11",
     "mongoose-unique-validator": "1.0.2",
     "morgan": "^1.9.1",
     "multer": "1.3.0",
@@ -44,7 +45,7 @@
     "underscore": "1.8.3"
   },
   "devDependencies": {
-    "newman": "^3.8.2",
+    "newman": "^4.5.0",
     "nodemon": "^1.11.0"
   }
 }
